--- a/public/styles/post.css
+++ b/public/styles/post.css
@@ -108,6 +108,10 @@
      padding-left: 48px
  }
  
+ .top-header-currentPage a {
+     color: rgb(204, 204, 204);
+ }
+ 
  .top-header-currentPage span {
      color: rgb(89, 89, 89);
      font-weight: 580
@@ -371,13 +375,13 @@
          height: 80px
      }
      .top-header-nav {
-         display: none
+         display: none;
      }
      .top-header-nav li a {
          z-index: 6;
-         color: white;
-         background-color: black;
-         font-size: 18px;
+         font-family: 'Kreon-Light';
+         font-size: 15px;
+         font-weight: 550;
      }
      .top-header-logo {
          padding-left: 0px
@@ -401,18 +405,27 @@
      }
      .responsive {
          display: flex;
-         flex-direction: row-reverse;
-         justify-content: flex-end;
          flex-wrap: wrap;
-         align-content: center;
-         align-items: center;
-         margin-left: auto;
          z-index: 100;
          position: absolute;
          top: 175px;
-         border: 1px solid blue;
-         background-color: grey;
-         min-height: 85px
+         background-image: linear-gradient( rgb(248, 248, 248), rgb(255, 255, 255));
+         min-height: 85px;
+         width: 100%;
+         align-items: stretch;
+         justify-content: space-around;
+         padding-top: 10px;
+         align-content: center;
+         align-items: center
+     }
+     .responsive li {
+         flex-grow: 1
+     }
+     .responsive li:nth-child(4) {
+         display: none
+     }
+     .responsive li:nth-child(5) {
+         display: none
      }
      .carousel-caption {
          display: none;
@@ -440,6 +453,9 @@
          justify-content: center;
          margin-top: -30px
      }
+     .main-content {
+         margin-top: -50px
+     }
      .main-content-right {
          display: none
      }
@@ -457,5 +473,28 @@
      .main-comment h1 {
          margin-top: 0px;
          font-size: 20px
+     }
+     article {
+         display: flex;
+         flex-flow: column
+     }
+ }
+ 
+ @media (max-width: 320px) {
+     .main-jumbotron-section h2 {
+         visibility: hidden
+     }
+     .main-comment-container div {
+         display: flex;
+         flex-flow: column
+     }
+     .main-comment-container img {
+         order: -2
+     }
+     .main-comment-container h3 {
+         order: -1
+     }
+     .main-comment-btn {
+         align-self: flex-start
      }
  }
