--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -4,7 +4,7 @@
 <nav>
 
     <div class="top-header">
-        <a class="top-header-logo" href="/">
+        <a class="top-header-logo" href="#/home">
             <img src="./pics/logo.png" class="top-header-logo-img">
             <span class="top-header-logo-text">Chameleon</span>
             <span class="top-header-slogan-text">Travel the World Now</span>
@@ -26,12 +26,12 @@
         </div>
 
         <ul class="top-header-nav" id="mobile-menu">
-            <li><a href="#" class="first-el">Home</a></li>
-            <li><a href="#" class="">About</a></li>
-            <li><a href="#" class=" ">Contact</a></li>
-            <li><a href="#" class=" ">Page Templates</a></li>
-            <li><a href="#" class=" ">Shortcodes</a></li>
-            <li><a href="#" class=" ">Blog</a></li>
+            <li><a href="#/blog" class="first-el">Home</a></li>
+            <li><a href="#/post" class="">About</a></li>
+            <li><a href="#/blog" class=" ">Contact</a></li>
+            <li><a href="#/post" class=" ">Page Templates</a></li>
+            <li><a href="#/blog" class=" ">Shortcodes</a></li>
+            <li><a href="#/blog" class=" ">Blog</a></li>
 
 
         </ul>
@@ -77,7 +77,7 @@
                 <div class="carousel-caption">
                     <h2>{{title}}</h2>
                     <p>{{summary}}</p>
-                    <a href="#" class="btn carousel-caption-btn">Read More</a>
+                    <a href="#/blog" class="btn carousel-caption-btn">Read More</a>
                 </div>
             </div>
             {{else}}
@@ -86,7 +86,7 @@
                 <div class="carousel-caption">
                     <h2>{{title}}</h2>
                     <p>{{summary}}</p>
-                    <a href="#" class="btn carousel-caption-btn">Read More</a>
+                    <a href="#/blog" class="btn carousel-caption-btn">Read More</a>
                 </div>
             </div>
             {{/if}} {{/carouselContent.result}}
@@ -140,7 +140,7 @@
                 <h4 class="blog-p__title">From The Blog</h4>
                 <ul class="blog-p__posts">
                     {{#recentPosts.result}}
-                    <li><a href="{{id}}">{{title}}</a></li>
+                    <li><a href="#/blog/{{id}}">{{title}}</a></li>
                     {{/recentPosts.result}}
                 </ul>
             </aside>
