--- a/public/styles/blog.css
+++ b/public/styles/blog.css
@@ -119,6 +119,10 @@
     font-weight: 580
 }
 
+.top-header-display-icon {
+    display: none;
+}
+
 
 /* Jumbotron settings */
 
@@ -194,30 +198,124 @@
 @media (max-width: 1050px) and (min-width: 800px) {}
 
 @media (max-width: 799px) and (min-width: 500px) {
+    .top-header {
+        max-height: 140px;
+    }
+    .top-header-logo {
+        padding-top: 25px
+    }
+    .top-header-logo-text {
+        top: 0px;
+        left: 0px
+    }
+    .top-header-panel {
+        display: none
+    }
+    .top-header-nav {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-top: 0px;
+        padding-right: 30px;
+        padding-top: 2px;
+    }
+    .top-header-currentPage {
+        position: absolute;
+        top: 120px
+    }
     .main-jumbotron-section {
-        margin-top: 40px;
-        margin-bottom: 0px
+        margin-bottom: -20px;
+        padding-bottom: 0px;
     }
     .main-jumbotron-section h2 {
-        font-size: 1.8em
+        font-size: 1.6em;
+        top: -30px
     }
     .main-jumbotron-section p {
-        font-size: 1.4em
+        font-size: 1.4em;
+        top: -30px;
+        padding-bottom: 0px;
+        margin-bottom: 0px
     }
 }
 
 @media (max-width: 499px) {
+    .top-header {
+        height: 80px
+    }
+    .top-header-nav {
+        display: none;
+    }
+    .top-header-nav li a {
+        z-index: 6;
+        font-family: 'Kreon-Light';
+        font-size: 15px;
+        font-weight: 550;
+    }
+    .top-header-logo {
+        padding-left: 0px
+    }
+    .top-header-logo-text {
+        top: 0px
+    }
+    .top-header-panel {
+        display: none
+    }
+    .top-header-display-icon {
+        display: block;
+        margin-left: 3.5rem;
+        padding-top: 30px;
+        position: relative;
+        float: right;
+    }
+    .top-header-currentPage {
+        position: absolute;
+        top: 100px
+    }
+    .responsive {
+        display: flex;
+        flex-wrap: wrap;
+        z-index: 100;
+        position: absolute;
+        top: 185px;
+        background-image: linear-gradient( rgb(248, 248, 248), rgb(255, 255, 255));
+        min-height: 65px;
+        width: 100%;
+        align-items: stretch;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+        border-top: 1px solid #E8ECD4;
+        border-bottom: 1px solid #E8ECD4
+    }
+    .responsive li {
+        flex-grow: 1
+    }
+    .responsive li:nth-child(4) {
+        display: none
+    }
+    .responsive li:nth-child(5) {
+        display: none
+    }
     .card-entry-container {
         display: block
     }
     .main-jumbotron-section {
         margin-top: 30px;
-        margin-bottom: -20px
+        margin-bottom: -50px
     }
     .main-jumbotron-section h2 {
-        font-size: 1.5em
+        font-size: 1.4em;
+        margin-top: -20px
     }
     .main-jumbotron-section p {
         display: none
+    }
+}
+
+@media (max-width: 320px) {
+    .main-jumbotron-section h2 {
+        visibility: hidden
     }
 }
