--- a/public/views/blog.hbs
+++ b/public/views/blog.hbs
@@ -27,7 +27,7 @@
                 </div>
             </a>
 
-            <ul class="top-header-nav">
+            <ul class="top-header-nav" id="mobile-menu">
                 <li><a href="#" class="first-el">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -35,7 +35,7 @@
                 <li><a href="#">Shortcodes</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
-
+             <a href="javascript:void(0);" style="font-size:15px;" class="top-header-display-icon" onclick="myFunction()">&#9776;</a>
             <div class="top-header-currentPage">
                <a  href="#/">Home</a> >> <strong>{{blogArticles.result.[0].category}}</strong>
             </div>
