--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -120,7 +120,7 @@
     {{!-- Top 3 images --}}
     <section id="main-content" class="group">
         <div class="previews">
-            {{#latestSportNews.result}}
+            {{#countryInfo.result}}
             <article class="preview">
                 <h2 class="preview__title">{{title}}</h2>
                 <div class="preview__image-container">
@@ -131,7 +131,7 @@
                 </div>
                 <p class="preview__summary">{{summary}}</p>
             </article>
-            {{/latestSportNews.result}}
+            {{/countryInfo.result}}
         </div>
 
         {{!-- End of 3 top images --}}
